--- a/WebviewSDK/build.gradle
+++ b/WebviewSDK/build.gradle
@@ -2,15 +2,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "file://$buildDir/repo")
-            pom.groupId = 'com.example.webviewsdk'
-            pom.version = '1.0'
-        }
-    }
-}
+
 android {
     compileSdk 31
 
@@ -58,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.4.0'
     // Assertions
     //implementation 'androidx.biometric:biometric:1.2.0-alpha04'
-    api 'androidx.biometric:biometric:1.1.0'
+    implementation 'androidx.biometric:biometric:1.1.0'
 
 
 
@@ -68,4 +60,58 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.2.4'
     androidTestImplementation  'androidx.fragment:fragment-testing:1.3.0'
     //testImplementation "org.robolectric:shadows-supportv4:3.8"
+}
+
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set("sources")
+}
+
+publishing {
+    publications {
+        bar(MavenPublication) {
+            groupId 'com.example.webviewsdk'
+            artifactId 'artifact'
+            version '1.0'
+            artifact sourceJar
+            artifact("$buildDir/outputs/aar/WebviewSDK-debug.aar")
+            pom.withXml {
+                final dependenciesNode = asNode().appendNode('dependencies')
+                ext.addDependency = { Dependency dep, String scope ->
+                    if (dep.group == null || dep.version == null || dep.name == null || dep.name == "unspecified")
+                        return
+                    final dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', dep.group)
+                    dependencyNode.appendNode('artifactId', dep.name)
+                    dependencyNode.appendNode('version', dep.version)
+                    dependencyNode.appendNode('scope', scope)
+                    if (!dep.transitive) {
+                        final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
+                        exclusionNode.appendNode('groupId', '*')
+                        exclusionNode.appendNode('artifactId', '*')
+                    } else if (!dep.properties.excludeRules.empty) {
+                        final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
+                        dep.properties.excludeRules.each { ExcludeRule rule ->
+                            exclusionNode.appendNode('groupId', rule.group ?: '*')
+                            exclusionNode.appendNode('artifactId', rule.module ?: '*')
+                        }
+                    }
+                }
+                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "compile") }
+                configurations.api.getDependencies().each { dep -> addDependency(dep, "compile") }
+                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "runtime") }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/rikeshgarg/androidbilmetrics")
+            credentials {
+                username = "rikeshgarg" // Better if you use env variable
+                password = "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"
+            }
+        }
+    }
 }
